Formated the code with proper comments

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,14 +1,15 @@
-﻿<!DOCTYPE html>
+﻿<!-- 
+This is a basic HTML page that displays a message indicating that the Express REST API is up and running.
+-->
+
+<!DOCTYPE html>
 <html>
 <head>
-<title><%= title %></title>
+	<title><%= title %></title>
 </head>
 <body>
-
-<div>
-	<h2> Express REST API is up and running - Group 1</h2>
-
-</div>
-
+	<div>
+		<h2> Express REST API is up and running </h2>
+	</div>
 </body>
 </html>
